crates/aura-app/tests/ui/projection_state_helpers_private.rs
fn main() {
    let _ = aura_app::workflows::state_helpers::with_chat_state::<()>;
    let _ = aura_app::workflows::state_helpers::with_contacts_state::<()>;
}
